--- a/YourCourses/packages.config
+++ b/YourCourses/packages.config
@@ -61,6 +61,7 @@
   <package id="NUnit" version="3.6.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
   <package id="ScriptCs.Contracts" version="0.17.1" targetFramework="net452" />
   <package id="ScriptCs.Core" version="0.17.1" targetFramework="net452" />
   <package id="ScriptCs.Engine.Roslyn" version="0.17.1" targetFramework="net452" />
