Add some buttons styles

--- a/YourCourses/YourCourses.csproj
+++ b/YourCourses/YourCourses.csproj
@@ -323,6 +323,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\1.png" />
     <Content Include="Content\Images\gears.gif" />
+    <Content Include="Content\Index.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
