--- a/YourCourses/YourCourses.csproj
+++ b/YourCourses/YourCourses.csproj
@@ -326,6 +326,7 @@
     <Compile Include="Models\Practice.cs" />
     <Compile Include="Models\PracticeAndUserMark.cs" />
     <Compile Include="Models\SubLecture.cs" />
+    <Compile Include="Models\UserRolesDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseFormViewModel.cs" />
@@ -738,11 +739,17 @@
     <Content Include="Views\CoursesList\Show.cshtml" />
     <Content Include="Views\Execute\Index.cshtml" />
     <Content Include="Views\Home\Search.cshtml" />
+    <Content Include="Views\Admin\AddRole.cshtml" />
+    <Content Include="Views\Admin\Create.cshtml" />
+    <Content Include="Views\Admin\EditRoles.cshtml" />
+    <Content Include="Views\Admin\EditUser.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\ViewAllRoles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Services\" />
-    <Folder Include="Views\Admin\" />
+    <Folder Include="Views\NewFolder1\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
