Try to improve challenge (not shure)

--- a/YourCourses/Web.config
+++ b/YourCourses/Web.config
@@ -19,13 +19,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="ErrorPage.html">
+          <error statusCode="404" redirect="ErrorPage.html" />
+          <error statusCode="500" redirect="500.aspx" />
+       </customErrors>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  
   </system.web>
   <system.webServer>
     <modules>
@@ -34,12 +37,13 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -109,3 +113,4 @@
     </compilers>
   </system.codedom>
 </configuration>
+<!--ProjectGuid: 67FD3CA6-50E8-4EA4-9BB7-14509608A6D2-->
